# fpga-timing-benchmarks

./: .flake8  .gitignore  README.md  pyproject.toml  run_suite.py  run_syntax_suite.py
.github/workflows/: lint.yml
auto_generated/: generate_sdc.py
auto_generated/SDC/create_clock/: create_clock_0.sdc  create_clock_1.sdc  create_clock_10.sdc  create_clock_11.sdc  create_clock_12.sdc  create_clock_13.sdc  create_clock_14.sdc  create_clock_15.sdc  create_clock_16.sdc  create_clock_17.sdc  create_clock_18.sdc  create_clock_19.sdc  create_clock_2.sdc  create_clock_20.sdc  create_clock_21.sdc  create_clock_22.sdc  create_clock_23.sdc  create_clock_24.sdc  create_clock_25.sdc  create_clock_26.sdc  create_clock_27.sdc  create_clock_28.sdc  create_clock_29.sdc  create_clock_3.sdc  create_clock_30.sdc  create_clock_31.sdc  create_clock_32.sdc  create_clock_33.sdc  create_clock_34.sdc  create_clock_35.sdc  create_clock_36.sdc  create_clock_37.sdc  create_clock_38.sdc  create_clock_39.sdc  create_clock_4.sdc  create_clock_40.sdc  create_clock_41.sdc  create_clock_42.sdc  create_clock_43.sdc  create_clock_44.sdc  (+8 more)
auto_generated/Verilog/: create_clock_netllist.v
auto_generated/netlist_files/: all_clocks_netlist.v  all_inputs_netlist.v  all_outputs_netlist.v  all_registers_netlist.v  create_clock_netlist.v  create_generated_clock_netlist.v  set_clock_groups_netlist.v  set_clock_latency_netlist.v  set_clock_uncertainty_netlist.v  set_disable_timing_netlist.v  set_false_path_netlist.v  set_input_delay_netlist.v  set_max_delay_netlist.v  set_min_delay_netlist.v  set_multicycle_path_netlist.v  set_output_delay_netlist.v
fpga_timing_benchmarks/benchmarks/: benchmark.py
scripts/: generate_sdc.py  visualize_results.py
scripts/sdc_gen/: generate_sdc.py
(+169466 files in other folders)
